# vsm-cpp-mikrokopter

./: CMakeLists.txt  README.md  vsm.conf
doc/: default.conf
doc/pages/: user_guide.dox
include/: mikrokopter_protocol.h  mikrokopter_vehicle.h  protocol_data.h  vehicle_manager.h
src/: main.cpp  mikrokopter_protocol.cpp  mikrokopter_vehicle.cpp  vehicle_manager.cpp
